--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-native": "0.29.0",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1",
+    "redux-saga": "^0.11.0",
     "reselect": "^2.5.3"
   },
   "devDependencies": {
