--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
     "immutable": "^3.8.1",
     "lodash": "^4.13.1",
     "react": "^15.2.1",
