--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
     "immutable": "^3.8.1",
     "lodash": "^4.13.1",
     "react": "^15.2.1",
     "react-native": "0.29.0",
     "react-redux": "^4.4.2",
     "redux": "^3.4.0",
-    "redux-thunk": "^2.0.1",
+    "redux-saga": "^0.11.0",
     "reselect": "^2.5.3"
   },
   "devDependencies": {
