added absolute paths

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,8 @@
   "settings": {
     "import/resolver": {
       "node": {
-        "extensions": [".js", ".android.js", ".ios.js"]
+        "extensions": [".js", ".android.js", ".ios.js"],
+        "moduleDirectory": ["..", "node_modules"]
       }
     }
   },
