--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "reselect": "^2.5.3"
   },
   "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-resolver": "0.0.18",
     "chai": "^3.5.0",
     "enzyme": "2.3.0",
     "eslint": "2.9.0",
