--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "mocha --opts test/mocha.opts test/**/*.spec.js",
+    "test": "mocha --opts test/mocha.opts 'test/**/*.spec.js'",
+    "test_android": "env MOCHA_PLATFORM=android mocha --opts test/mocha.opts 'test/**/*.spec.js'",
     "lint": "node_modules/eslint/bin/eslint.js ."
   },
   "dependencies": {
