WIP for flow and more linting (#20)
* Fix linter issues
* not require return types
* match up to FB docs

--- a/package.json
+++ b/package.json
@@ -6,31 +6,36 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "mocha --opts test/mocha.opts 'test/**/*.spec.js'",
     "test_android": "env MOCHA_PLATFORM=android mocha --opts test/mocha.opts 'test/**/*.spec.js'",
-    "lint": "node_modules/eslint/bin/eslint.js ."
+    "eslint": "eslint --ext .js,.jsx .",
+    "jscs": "jscs .",
+    "lint": "npm run eslint"
   },
   "dependencies": {
     "babel-polyfill": "^6.9.1",
     "immutable": "^3.8.1",
     "lodash": "^4.13.1",
     "react": "^15.2.1",
-    "react-native": "0.29.0",
-    "react-redux": "^4.4.2",
-    "redux": "^3.4.0",
+    "react-native": "0.30.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
     "redux-saga": "^0.11.0",
     "reselect": "^2.5.3"
   },
   "devDependencies": {
-    "babel-core": "^6.10.4",
+    "babel-core": "^6.11.4",
     "babel-resolver": "0.0.18",
     "chai": "^3.5.0",
-    "enzyme": "2.3.0",
-    "eslint": "2.9.0",
+    "enzyme": "2.4.1",
+    "eslint": "3.1.1",
     "eslint-config-shakacode": "5.0.0",
-    "eslint-plugin-import": "1.10.2",
-    "eslint-plugin-jsx-a11y": "1.2.0",
+    "eslint-plugin-flowtype": "^2.3.1",
+    "eslint-plugin-import": "1.11.1",
+    "eslint-plugin-jsx-a11y": "2.0.1",
     "eslint-plugin-react": "5.2.2",
     "eslint-plugin-react-native": "^1.1.0",
-    "mocha": "^2.4.5",
+    "flow": "^0.2.3",
+    "jscs": "^2.11.0",
+    "mocha": "^2.5.3",
     "react-addons-test-utils": "15.2.1",
     "react-dom": "15.2.1",
     "redux-logger": "^2.6.1"
