--- a/.flowconfig
+++ b/.flowconfig
@@ -8,21 +8,19 @@
 
 # Ignore malformed json
 .*/node_modules/y18n/test/.*\.json
+.*/node_modules/jsonlint/test/.*\.json
 
 [include]
 
 [libs]
 node_modules/react-native/Libraries/react-native/react-native-interface.js
 node_modules/react-native/flow
-flow/
 
 [options]
 module.system=haste
 
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
-
-experimental.strict_type_args=true
 
 munge_underscores=true
 
@@ -38,4 +36,4 @@ suppress_comment=\\(.\\|\n\\)*\\$FlowIssue\\((\\(>=0\\.\\(2[0-7]\\|1[0-9]\\|[0-9
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixedInNextDeploy
 
 [version]
-^0.27.0
+^0.22.1
