--- a/ios/ReactNativeTutorial.xcodeproj/xcshareddata/xcschemes/ReactNativeTutorial.xcscheme
+++ b/ios/ReactNativeTutorial.xcodeproj/xcshareddata/xcschemes/ReactNativeTutorial.xcscheme
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0620"
+   LastUpgradeVersion = "0810"
    version = "1.3">
    <BuildAction
-      parallelizeBuildables = "YES"
+      parallelizeBuildables = "NO"
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
@@ -14,8 +14,22 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
+               BlueprintIdentifier = "83CBBA2D1A601D0E00E9B192"
+               BuildableName = "libReact.a"
+               BlueprintName = "React"
+               ReferencedContainer = "container:../node_modules/react-native/React/React.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "RNComments.app"
+               BuildableName = "ReactNativeTutorial.app"
                BlueprintName = "ReactNativeTutorial"
                ReferencedContainer = "container:ReactNativeTutorial.xcodeproj">
             </BuildableReference>
@@ -57,7 +71,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNComments.app"
+            BuildableName = "ReactNativeTutorial.app"
             BlueprintName = "ReactNativeTutorial"
             ReferencedContainer = "container:ReactNativeTutorial.xcodeproj">
          </BuildableReference>
@@ -80,7 +94,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNComments.app"
+            BuildableName = "ReactNativeTutorial.app"
             BlueprintName = "ReactNativeTutorial"
             ReferencedContainer = "container:ReactNativeTutorial.xcodeproj">
          </BuildableReference>
@@ -99,7 +113,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "RNComments.app"
+            BuildableName = "ReactNativeTutorial.app"
             BlueprintName = "ReactNativeTutorial"
             ReferencedContainer = "container:ReactNativeTutorial.xcodeproj">
          </BuildableReference>
