--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
     "babel-jest": "17.0.2",
     "babel-preset-react-native": "1.9.0",
     "eslint": "^3.12.0",
-    "eslint-config-shakacode": "^13.2.0-beta.1",
+    "eslint-config-shakacode": "^13.2.0",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-flowtype": "^2.29.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-lodash-fp": "^2.1.3",
     "eslint-plugin-react": "^6.8.0",
     "eslint-plugin-react-native": "^2.2.0",
