--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -21,6 +21,8 @@ settings:
     onlyFilesWithFlowAnnotation: true
 globals:
   __DEV__: true
+  ReactClass: true
+  ReactElement: true
 rules:
   react-native/no-unused-styles: 2
   react-native/split-platform-components: 2
